# This file is part of sfnt2woff-zopfli-sys. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/sfnt2woff-zopfli-sys/master/COPYRIGHT. No part of sfnt2woff-zopfli-sys, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of sfnt2woff-zopfli-sys. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/sfnt2woff-zopfli-sys/master/COPYRIGHT.


[package]
name = "sfnt2woff-zopfli-sys"
description = "sfnt2woff-zopfli-sys"
keywords = ["sfnt2woff-zopfli", "sfnt2woff", "ttf", "woff", "font"]
categories = ["external-ffi-bindings", "web-programming", "compression", "encoding"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/sfnt2woff-zopfli-sys/blob/master/README.md"
homepage = "https://github.com/lemonrock/sfnt2woff-zopfli-sys"
repository = "https://github.com/lemonrock/sfnt2woff-zopfli-sys.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.30.0"
gcc = { version = "0.3", features = ["parallel"] }
